# microclimate-x

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  cache.py  config.py  errors.py  main.py  ml_engine.py  rule_engine.py  schemas.py  terrain.py
docs/: MEETING_CHEAT_SHEET.html  MEETING_CHEAT_SHEET.md  architecture.md  dataset.md  pipeline_order.md  supervisor_meeting_brief.md  thresholds.md
figures/: evaluation_summary.json  threshold_sweep.csv
frontend/: index.html
models/: MODEL_CARD.md  feature_columns.json  training_report.json
scripts/: 1_download_dataset.py  1b_synth_dataset.py  2_preprocess.py  3_train_model.py  4_evaluate_model.py
tests/: conftest.py  test_api.py  test_cache.py  test_hybrid_engine.py  test_ml_engine.py  test_rule_engine.py  test_terrain.py  test_terrain_edge.py
